# health_disease_detector

./: README.md  main.py  pyproject.toml
